# Stack-Lens

./: .gitignore  README.md  profiler.py  pyproject.toml  requirements.txt  span_builder.py  testplan.md  trace_io.py  trace_reader.py
cpp/ambiq/trace_common/: trace.cpp  trace.hpp  trace_common.cmake  trace_sections.ld
gui/: __init__.py  axes.py  bookmark_dock.py  call_graph_dock.py  call_tree_dock.py  color_bar.py  constants.py  cursor_handle.py  dock_base.py  dock_title_bar.py  event_filters.py  file_association.py  flame_item.py  jitter_dialog.py  jlink_connect_dialog.py  main_window.py  marker_dock.py  minimap_widget.py  ribbon_dock.py  settings_dialog.py  shortcut_overlay.py  sort_helpers.py  summary_dock.py  theme.py  toast_widget.py  top_n_dock.py
gui/themes/: dark.json  dracula.json  high_contrast.json  light.json  monokai.json  nord.json  solarized_dark.json
notes/: timer-isr-bunching.md
scripts/: gen_ico.py
tests/: test_sltrace_io.py
