[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexm0-profiler"
version = "0.1.0"
description = "Real-time flame-chart profiler for ARM Cortex-M0 targets"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pyqtgraph>=0.13",
    "pylink-square>=1.0",
    "pyelftools>=0.29",
]

[project.scripts]
cortexm0-profiler = "profiler:main"

[tool.setuptools.packages.find]
where = ["."]
